data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1779.wast
;; 10. **Test Case 10**: Write a control flow with `br_if` where any conditional jump leads to a scenario with mismatched operand stacks between blocks, ensuring type consistency.    - **Constraint Checked**: Validation of operand stacks across conditional jumps ensuring type consistency.    - **CFG Relation**: CFG invalidity if operand stacks mismatch across conditional jumps creating unreachable or misaligned paths.  These test cases examine the nuanced label referencing, stack handling, and control flow validation to identify inconsistencies in CFG implementations between WebAssembly and the wizard_engine.

(assert_invalid
  (module
    (func 
      (block (result i32)
        (block (result i32)
          (i32.const 1)
          (if (result i32) 
            (then 
              (br_if 0 (i32.const 1))
            )
            (else 
              (i32.const 1)
            )
          )
        )
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)